added support for < 601px resolution for the block business-model

--- a/src/html/business-model.html
+++ b/src/html/business-model.html
@@ -1,12 +1,13 @@
 <section class="business-model">
   <div class="container business-model__container">
     <h2 class="title business-model__title">
-      бизнес-модель успешно проверена
+      бизнес-модель успешно&nbsp;проверена
       <span class="business-model__title-offset text_green">
         в 4 городах России
       </span>
     </h2>
   </div>
+
   <div class="business-model__slider">
     <div class="business-model__slick-block">
       <svg
@@ -82,8 +83,54 @@
           />
         </div>
       </div>
+
+      <div class="business-model__track business-model__track-slider">
+        <div
+          class="business-model__slider-photo business-model__slider-photo_active"
+          id="businessModel__sliderPhoto-0"
+        >
+          <img
+            src="@images/business-model/business-model_0.jpg"
+            alt=""
+            class="business-model__slider-photo-img"
+          />
+        </div>
+        <div
+          class="business-model__slider-photo"
+          id="businessModel__sliderPhoto-1"
+        >
+          <img
+            src="@images/business-model/business-model_1.jpg"
+            alt=""
+            class="business-model__slider-photo-img"
+          />
+        </div>
+        <div
+          class="business-model__slider-photo"
+          id="businessModel__sliderPhoto-2"
+        >
+          <img
+            src="@images/business-model/business-model_2.jpg"
+            alt=""
+            class="business-model__slider-photo-img"
+          />
+        </div>
+        <div
+          class="business-model__slider-photo"
+          id="businessModel__sliderPhoto-3"
+        >
+          <img
+            src="@images/business-model/business-model_3.jpg"
+            alt=""
+            class="business-model__slider-photo-img"
+          />
+        </div>
+      </div>
       <ul class="business-model__city-info-list">
-        <li class="business-model__city-info-el">
+        <li
+          class="business-model__city-info-el business-model__city-info-el_active"
+          id="businessModel__info-0"
+        >
           <span class="business-model__city-info-el-num">#1</span>
           <span class="business-model__city-info-el-format">Магазин</span>
           <div class="business-model__city-info-el-location">
@@ -93,7 +140,7 @@
             </span>
           </div>
         </li>
-        <li class="business-model__city-info-el">
+        <li class="business-model__city-info-el" id="businessModel__info-1">
           <span class="business-model__city-info-el-num">#2</span>
           <span class="business-model__city-info-el-format">Офис продаж</span>
           <div class="business-model__city-info-el-location">
@@ -103,9 +150,7 @@
             </span>
           </div>
         </li>
-        <li
-          class="business-model__city-info-el business-model__city-info-el_active"
-        >
+        <li class="business-model__city-info-el" id="businessModel__info-2">
           <span class="business-model__city-info-el-num">#3</span>
           <span class="business-model__city-info-el-format">Магазин</span>
           <div class="business-model__city-info-el-location">
@@ -115,7 +160,7 @@
             </span>
           </div>
         </li>
-        <li class="business-model__city-info-el">
+        <li class="business-model__city-info-el" id="businessModel__info-3">
           <span class="business-model__city-info-el-num">#4</span>
           <span class="business-model__city-info-el-format">Магазин</span>
           <div class="business-model__city-info-el-location">
@@ -127,91 +172,170 @@
         </li>
       </ul>
     </div>
-    <div class="business-model__progress-bar">
-      <ul class="business-model__progress-bar-date">
-        <span class="business-model__progress-bar-el">май, 2016</span>
-        <span class="business-model__progress-bar-el">октябрь, 2021</span>
-        <span class="business-model__progress-bar-el">май, 2022</span>
-        <span class="business-model__progress-bar-el">сентябрь, 2022</span>
-      </ul>
-      <div class="business-model__progress-bar-wrap">
-        <div class="business-model__progress-bar-toddler"></div>
-        <svg
-          width="1380"
-          height="14"
-          viewBox="0 0 1380 14"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path d="M20 0V14" stroke="white" />
-          <path d="M40 0V14" stroke="white" />
-          <path d="M60 0V14" stroke="white" />
-          <path d="M80 0V14" stroke="white" />
-          <path d="M100 0V14" stroke="white" />
-          <path d="M120 0V14" stroke="white" />
-          <path d="M140 0V14" stroke="white" />
-          <path d="M160 0V14" stroke="white" />
-          <path d="M180 0V14" stroke="white" />
-          <path d="M200 0V14" stroke="white" />
-          <path d="M220 0V14" stroke="white" />
-          <path d="M240 0V14" stroke="white" />
-          <path d="M260 0V14" stroke="white" />
-          <path d="M280 0V14" stroke="white" />
-          <path d="M300 0V14" stroke="white" />
-          <path d="M320 0V14" stroke="white" />
-          <path d="M340 0V14" stroke="white" />
-          <path d="M360 0V14" stroke="white" />
-          <path d="M380 0V14" stroke="white" />
-          <path d="M400 0V14" stroke="white" />
-          <path d="M420 0V14" stroke="white" />
-          <path d="M440 0V14" stroke="white" />
-          <path d="M460 0V14" stroke="white" />
-          <path d="M480 0V14" stroke="white" />
-          <path d="M500 0V14" stroke="white" />
-          <path d="M520 0V14" stroke="white" />
-          <path d="M540 0V14" stroke="white" />
-          <path d="M560 0V14" stroke="white" />
-          <path d="M580 0V14" stroke="white" />
-          <path d="M600 0V14" stroke="white" />
-          <path d="M620 0V14" stroke="white" />
-          <path d="M640 0V14" stroke="white" />
-          <path d="M660 0V14" stroke="white" />
-          <path d="M680 0V14" stroke="white" />
-          <path d="M700 0V14" stroke="white" />
-          <path d="M720 0V14" stroke="white" />
-          <path d="M740 0V14" stroke="white" />
-          <path d="M760 0V14" stroke="white" />
-          <path d="M780 0V14" stroke="white" />
-          <path d="M800 0V14" stroke="white" />
-          <path d="M820 0V14" stroke="white" />
-          <path d="M840 0V14" stroke="white" />
-          <path d="M860 0V14" stroke="white" />
-          <path d="M880 0V14" stroke="white" />
-          <path d="M900 0V14" stroke="white" />
-          <path d="M920 0V14" stroke="white" />
-          <path d="M940 0V14" stroke="white" />
-          <path d="M960 0V14" stroke="white" />
-          <path d="M980 0V14" stroke="white" />
-          <path d="M1000 0V14" stroke="white" />
-          <path d="M1020 0V14" stroke="white" />
-          <path d="M1040 0V14" stroke="white" />
-          <path d="M1060 0V14" stroke="white" />
-          <path d="M1080 0V14" stroke="white" />
-          <path d="M1100 0V14" stroke="white" />
-          <path d="M1120 0V14" stroke="white" />
-          <path d="M1140 0V14" stroke="white" />
-          <path d="M1160 0V14" stroke="white" />
-          <path d="M1180 0V14" stroke="white" />
-          <path d="M1200 0V14" stroke="white" />
-          <path d="M1220 0V14" stroke="white" />
-          <path d="M1240 0V14" stroke="white" />
-          <path d="M1260 0V14" stroke="white" />
-          <path d="M1280 0V14" stroke="white" />
-          <path d="M1300 0V14" stroke="white" />
-          <path d="M1320 0V14" stroke="white" />
-          <path d="M1340 0V14" stroke="white" />
-          <path d="M1360 0V14" stroke="white" />
-        </svg>
+    <div class="business-model__progress-bar-wrapper">
+      <div class="business-model__progress-bar">
+        <ul class="business-model__progress-bar-date">
+          <span class="business-model__progress-bar-el">май, 2016</span>
+          <span class="business-model__progress-bar-el">октябрь, 2021</span>
+          <span class="business-model__progress-bar-el">май, 2022</span>
+          <span class="business-model__progress-bar-el">сентябрь, 2022</span>
+        </ul>
+        <div class="business-model__progress-bar-wrap">
+          <div class="business-model__progress-bar-toddler"></div>
+          <svg
+            width="1380"
+            height="14"
+            viewBox="0 0 1380 14"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="business-model__progress-bar-img"
+          >
+            <path d="M20 0V14" stroke="white" />
+            <path d="M40 0V14" stroke="white" />
+            <path d="M60 0V14" stroke="white" />
+            <path d="M80 0V14" stroke="white" />
+            <path d="M100 0V14" stroke="white" />
+            <path d="M120 0V14" stroke="white" />
+            <path d="M140 0V14" stroke="white" />
+            <path d="M160 0V14" stroke="white" />
+            <path d="M180 0V14" stroke="white" />
+            <path d="M200 0V14" stroke="white" />
+            <path d="M220 0V14" stroke="white" />
+            <path d="M240 0V14" stroke="white" />
+            <path d="M260 0V14" stroke="white" />
+            <path d="M280 0V14" stroke="white" />
+            <path d="M300 0V14" stroke="white" />
+            <path d="M320 0V14" stroke="white" />
+            <path d="M340 0V14" stroke="white" />
+            <path d="M360 0V14" stroke="white" />
+            <path d="M380 0V14" stroke="white" />
+            <path d="M400 0V14" stroke="white" />
+            <path d="M420 0V14" stroke="white" />
+            <path d="M440 0V14" stroke="white" />
+            <path d="M460 0V14" stroke="white" />
+            <path d="M480 0V14" stroke="white" />
+            <path d="M500 0V14" stroke="white" />
+            <path d="M520 0V14" stroke="white" />
+            <path d="M540 0V14" stroke="white" />
+            <path d="M560 0V14" stroke="white" />
+            <path d="M580 0V14" stroke="white" />
+            <path d="M600 0V14" stroke="white" />
+            <path d="M620 0V14" stroke="white" />
+            <path d="M640 0V14" stroke="white" />
+            <path d="M660 0V14" stroke="white" />
+            <path d="M680 0V14" stroke="white" />
+            <path d="M700 0V14" stroke="white" />
+            <path d="M720 0V14" stroke="white" />
+            <path d="M740 0V14" stroke="white" />
+            <path d="M760 0V14" stroke="white" />
+            <path d="M780 0V14" stroke="white" />
+            <path d="M800 0V14" stroke="white" />
+            <path d="M820 0V14" stroke="white" />
+            <path d="M840 0V14" stroke="white" />
+            <path d="M860 0V14" stroke="white" />
+            <path d="M880 0V14" stroke="white" />
+            <path d="M900 0V14" stroke="white" />
+            <path d="M920 0V14" stroke="white" />
+            <path d="M940 0V14" stroke="white" />
+            <path d="M960 0V14" stroke="white" />
+            <path d="M980 0V14" stroke="white" />
+            <path d="M1000 0V14" stroke="white" />
+            <path d="M1020 0V14" stroke="white" />
+            <path d="M1040 0V14" stroke="white" />
+            <path d="M1060 0V14" stroke="white" />
+            <path d="M1080 0V14" stroke="white" />
+            <path d="M1100 0V14" stroke="white" />
+            <path d="M1120 0V14" stroke="white" />
+            <path d="M1140 0V14" stroke="white" />
+            <path d="M1160 0V14" stroke="white" />
+            <path d="M1180 0V14" stroke="white" />
+            <path d="M1200 0V14" stroke="white" />
+            <path d="M1220 0V14" stroke="white" />
+            <path d="M1240 0V14" stroke="white" />
+            <path d="M1260 0V14" stroke="white" />
+            <path d="M1280 0V14" stroke="white" />
+            <path d="M1300 0V14" stroke="white" />
+            <path d="M1320 0V14" stroke="white" />
+            <path d="M1340 0V14" stroke="white" />
+            <path d="M1360 0V14" stroke="white" />
+          </svg>
+
+          <svg
+            width="961"
+            height="11"
+            viewBox="0 0 961 11"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="business-model__progress-bar-img-mob"
+          >
+            <path d="M26.0422 0.857422V10.8574" stroke="white" />
+            <path d="M40.0422 0.857422V10.8574" stroke="white" />
+            <path d="M54.0422 0.857422V10.8574" stroke="white" />
+            <path d="M68.0422 0.857422V10.8574" stroke="white" />
+            <path d="M82.0422 0.857422V10.8574" stroke="white" />
+            <path d="M96.0422 0.857422V10.8574" stroke="white" />
+            <path d="M110.042 0.857422V10.8574" stroke="white" />
+            <path d="M124.042 0.857422V10.8574" stroke="white" />
+            <path d="M138.042 0.857422V10.8574" stroke="white" />
+            <path d="M152.042 0.857422V10.8574" stroke="white" />
+            <path d="M166.042 0.857422V10.8574" stroke="white" />
+            <path d="M180.042 0.857422V10.8574" stroke="white" />
+            <path d="M194.042 0.857422V10.8574" stroke="white" />
+            <path d="M208.042 0.857422V10.8574" stroke="white" />
+            <path d="M222.042 0.857422V10.8574" stroke="white" />
+            <path d="M236.042 0.857422V10.8574" stroke="white" />
+            <path d="M250.042 0.857422V10.8574" stroke="white" />
+            <path d="M264.042 0.857422V10.8574" stroke="white" />
+            <path d="M278.042 0.857422V10.8574" stroke="white" />
+            <path d="M292.042 0.857422V10.8574" stroke="white" />
+            <path d="M306.042 0.857422V10.8574" stroke="white" />
+            <path d="M320.042 0.857422V10.8574" stroke="white" />
+            <path d="M334.042 0.857422V10.8574" stroke="white" />
+            <path d="M348.042 0.857422V10.8574" stroke="white" />
+            <path d="M362.042 0.857422V10.8574" stroke="white" />
+            <path d="M376.042 0.857422V10.8574" stroke="white" />
+            <path d="M390.042 0.857422V10.8574" stroke="white" />
+            <path d="M404.042 0.857422V10.8574" stroke="white" />
+            <path d="M418.042 0.857422V10.8574" stroke="white" />
+            <path d="M432.042 0.857422V10.8574" stroke="white" />
+            <path d="M446.042 0.857422V10.8574" stroke="white" />
+            <path d="M460.042 0.857422V10.8574" stroke="white" />
+            <path d="M474.042 0.857422V10.8574" stroke="white" />
+            <path d="M486.042 0.857422V10.8574" stroke="white" />
+            <path d="M500.042 0.857422V10.8574" stroke="white" />
+            <path d="M514.042 0.857422V10.8574" stroke="white" />
+            <path d="M528.042 0.857422V10.8574" stroke="white" />
+            <path d="M542.042 0.857422V10.8574" stroke="white" />
+            <path d="M556.042 0.857422V10.8574" stroke="white" />
+            <path d="M570.042 0.857422V10.8574" stroke="white" />
+            <path d="M584.042 0.857422V10.8574" stroke="white" />
+            <path d="M598.042 0.857422V10.8574" stroke="white" />
+            <path d="M612.042 0.857422V10.8574" stroke="white" />
+            <path d="M626.042 0.857422V10.8574" stroke="white" />
+            <path d="M640.042 0.857422V10.8574" stroke="white" />
+            <path d="M654.042 0.857422V10.8574" stroke="white" />
+            <path d="M668.042 0.857422V10.8574" stroke="white" />
+            <path d="M682.042 0.857422V10.8574" stroke="white" />
+            <path d="M696.042 0.857422V10.8574" stroke="white" />
+            <path d="M710.042 0.857422V10.8574" stroke="white" />
+            <path d="M724.042 0.857422V10.8574" stroke="white" />
+            <path d="M738.042 0.857422V10.8574" stroke="white" />
+            <path d="M752.042 0.857422V10.8574" stroke="white" />
+            <path d="M766.042 0.857422V10.8574" stroke="white" />
+            <path d="M780.042 0.857422V10.8574" stroke="white" />
+            <path d="M794.042 0.857422V10.8574" stroke="white" />
+            <path d="M808.042 0.857422V10.8574" stroke="white" />
+            <path d="M822.042 0.857422V10.8574" stroke="white" />
+            <path d="M836.042 0.857422V10.8574" stroke="white" />
+            <path d="M850.042 0.857422V10.8574" stroke="white" />
+            <path d="M864.042 0.857422V10.8574" stroke="white" />
+            <path d="M878.042 0.857422V10.8574" stroke="white" />
+            <path d="M892.042 0.857422V10.8574" stroke="white" />
+            <path d="M906.042 0.857422V10.8574" stroke="white" />
+            <path d="M920.042 0.857422V10.8574" stroke="white" />
+            <path d="M934.042 0.857422V10.8574" stroke="white" />
+          </svg>
+        </div>
       </div>
     </div>
   </div>
