--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
   <body id="main-body">
     <!-- prettier-ignore -->
     <main>
-      @@include('./html/header.html',{ page: "index"})
-      @@include('./html/section-top.html') 
+      <!-- @@include('./html/header.html',{ page: "index"})
+      @@include('./html/section-top.html')  -->
       
+      @@include('./html/business-model.html')
       <!-- @@include('./html/proposal.html')
       @@include('./html/reviews.html') -->
     <!--   <div class="business-model__height-block">
         <div class="business-model__sticky-block">
-          @@include('./html/business-model.html')
           @@include('./html/economy.html')
         </div>
       </div>  -->
