--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,10 @@
       <!-- @@include('./html/header.html',{ page: "index"})
       @@include('./html/section-top.html')  -->
       
-      @@include('./html/business-model.html')
+      <!-- @@include('./html/business-model.html') -->
       <!-- @@include('./html/proposal.html')
       @@include('./html/reviews.html') -->
+      @@include('./html/steps.html')
     <!--   <div class="business-model__height-block">
         <div class="business-model__sticky-block">
           @@include('./html/economy.html')
@@ -29,7 +30,6 @@
       @@include('./html/apple.html')
       <div class="steps__height-block">
         <div class="steps__sticky-block">
-          @@include('./html/steps.html')
           @@include('./html/cities.html')
         </div>
       </div>
