added support for < 601px resolution for the block galery

--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,17 @@
       <!-- @@include('./html/business-model.html') -->
       <!-- @@include('./html/proposal.html')
       @@include('./html/reviews.html') -->
-      @@include('./html/steps.html')
+      <!-- @@include('./html/steps.html') -->
     <!--   <div class="business-model__height-block">
         <div class="business-model__sticky-block">
           @@include('./html/economy.html')
         </div>
       </div>  -->
-      <!-- @@include('./html/support.html') -->
+      @@include('./html/support.html')
+      @@include('./html/galery.html') 
+      @@include('./html/support.html')
       <!-- @@include('./html/founder.html')
         @@include('./html/demand.html')
-      @@include('./html/galery.html') 
       @@include('./html/apple.html')
       <div class="steps__height-block">
         <div class="steps__sticky-block">
