--- a/src/html/galery.html
+++ b/src/html/galery.html
@@ -1,5 +1,6 @@
 <section class="galery">
   <div class="galery__sticky-block">
+    <div class="block-i"></div>
     <div class="galery__content">
       <div class="galery__content-left">
         <div class="galery__content-left-img1" id="galery__ImgLeft-0">
@@ -35,6 +36,26 @@
         </div>
       </div>
     </div>
+
+    <div class="galery__content galery__content-mobile">
+      <div class="galery__content-left">
+        <div class="galery__content-img-0" id="galeryMob__Img-0"></div>
+        <div class="galery__content-img-1" id="galeryMob__Img-1"></div>
+      </div>
+      <div class="galery__content-center">
+        <div class="galery__content-img-2" id="galeryMob__Img-2">
+          <h2 class="galery__title">
+            развивайте<br />
+            собственный бизнес вместе с командой appzone.co
+          </h2>
+        </div>
+        <div class="galery__content-center-bottom">
+          <div class="galery__content-img-3" id="galeryMob__Img-3"></div>
+          <div class="galery__content-img-4" id="galeryMob__Img-4"></div>
+        </div>
+      </div>
+    </div>
   </div>
+
   <div class="galery__fake-height"></div>
 </section>
