--- a/src/html/header.html
+++ b/src/html/header.html
@@ -15,9 +15,9 @@
 
     <span class="header__text">стильная зона Apple</span>
 
-    <div class="header__order-call-mobile">
+    <button class="header__order-call-mobile" type="button">
       <img src="@images/icon/icon_order-call-m.svg" alt="" />
-    </div>
+    </button>
 
     <div class="order-call header__order-call">
       <img
