--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <body id="main-body">
     <!-- prettier-ignore -->
     <main>
-      <!-- @@include('./html/header.html',{ page: "index"})
-      @@include('./html/section-top.html')  -->
+      @@include('./html/header.html',{ page: "index"})
+      @@include('./html/section-top.html') 
 
       <!-- @@include('./html/business-model.html') -->
       <!-- @@include('./html/proposal.html')
@@ -23,8 +23,8 @@
           @@include('./html/economy.html')
         </div>
       </div>  -->
-      @@include('./html/support.html')
-      @@include('./html/cities.html')
+      <!-- @@include('./html/support.html') -->
+      <!-- @@include('./html/cities.html') -->
       <!-- @@include('./html/founder.html')
         @@include('./html/galery.html') 
         @@include('./html/demand.html')
