added adaptive for  proposal block

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
       @@include('./html/header.html',{ page: "index"})
       @@include('./html/section-top.html') 
 
+      @@include('./html/proposal.html')
+      <!-- @@include('./html/reviews.html') -->
       <!-- @@include('./html/business-model.html') -->
-      <!-- @@include('./html/proposal.html')
-      @@include('./html/reviews.html') -->
       <!-- @@include('./html/steps.html') -->
       <!--   <div class="business-model__height-block">
         <div class="business-model__sticky-block">
