added adaptive for  reviews block

--- a/src/html/reviews.html
+++ b/src/html/reviews.html
@@ -1,14 +1,16 @@
 <section class="reviews">
   <div class="reviews__content">
-    <span class="reviews__announcement"> скоро открытие </span>
     <div class="reviews__title-block">
       <h2 class="title reviews__title">
         <span class="reviews__title-number">4 000</span>
         <span class="reviews__title-text">положительных отзывов</span>
         <span class="reviews__title-offset text_green">
-          и отметок в stories
+          и&nbsp;отметок<br />в&nbsp;stories
         </span>
       </h2>
+
+      <span class="reviews__announcement"> скоро открытие </span>
+      <span class="reviews__announcement2"> скоро открытие </span>
 
       <p class="reviews__text">
         Выдвая чеки покупателям, регулярно спрашиваем: «Откуда Вы о нас
