добавлен блок numbers

--- a/src/index.html
+++ b/src/index.html
@@ -271,9 +271,9 @@
           @@include('./html/business-model.html') @@include('./html/apple.html')
         </div>
       </div>
-      @@include('./html/demand.html') @@include('./html/economy.html')
-      @@include('./html/reviews.html') @@include('./html/galery.html')
-      @@include('./html/support.html')
+      @@include('./html/demand.html') @@include('./html/numbers.html')
+      @@include('./html/economy.html') @@include('./html/reviews.html')
+      @@include('./html/galery.html') @@include('./html/support.html')
       <div class="steps__height-block">
         <div class="steps__sticky-block">
           @@include('./html/steps.html') @@include('./html/cities.html')
