фиксация, дальше исправления

--- a/src/html/cities.html
+++ b/src/html/cities.html
@@ -2,254 +2,273 @@
   <div class="container cities__container">
     <div class="cities__markers">
       <div class="cities__marker" id="cities__marker-0">
-        <span class="cities__marker-num">1</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Тверь</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
-          <defs>
-            <linearGradient
-              id="paint0_linear_395_631"
-              x1="22"
-              y1="19.5"
-              x2="0"
-              y2="19.5"
-              gradientUnits="userSpaceOnUse"
-            >
-              <stop stop-color="#2794F9" />
-              <stop offset="1" stop-color="#0C5FDB" />
-            </linearGradient>
-          </defs>
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-1">
-        <span class="cities__marker-num">2</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Белгород</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-2">
-        <span class="cities__marker-num">3</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Орел</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-3">
-        <span class="cities__marker-num">4</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Воронеж</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-4">
-        <span class="cities__marker-num">5</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Иваново</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-5">
-        <span class="cities__marker-num">6</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Владимир</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-6">
-        <span class="cities__marker-num">7</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Старый Оскол</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-7">
-        <span class="cities__marker-num">8</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Пенза</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-8">
-        <span class="cities__marker-num">9</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Нижний Новгород</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-9">
-        <span class="cities__marker-num">10</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Ярославль</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-10">
-        <span class="cities__marker-num">11</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Псков</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-11">
-        <span class="cities__marker-num">12</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Вологда</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-12">
-        <span class="cities__marker-num">13</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Череповец</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-13">
-        <span class="cities__marker-num">14</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Великий Новгород</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-14">
-        <span class="cities__marker-num">15</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Рязань</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
       </div>
       <div class="cities__marker" id="cities__marker-15">
-        <span class="cities__marker-num">16</span>
+        <div class="cities__marker-block-text">
+          <span class="cities__marker-num">Старый Оскол</span>
+        </div>
         <svg
-          width="22"
-          height="26"
-          viewBox="0 0 22 26"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="9"
+          viewBox="0 0 15 9"
+          fill="none"
         >
           <path
-            d="M22 10.6364C22 16.5107 15.8889 21.2727 11 26C6.11111 21.2727 0 16.5107 0 10.6364C0 4.76206 4.92487 0 11 0C17.0751 0 22 4.76206 22 10.6364Z"
+            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
             fill="white"
           />
         </svg>
