--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,5 +1,5 @@
 <div class="popup" id="popup">
-  <div class="popup__container">
+  <div class="popup__container" id="popupContainer">
     <div class="popup__close-btn" id="popup__close-btn">
       <svg
         width="24"
