--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./style/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="./style.min.css" />
     <title>
       Франшиза по продаже техники Apple с чистой прибылью до 800 000 руб./мес.
@@ -287,6 +288,7 @@
     <script src="./js/jquery.min.js"></script>
     <script src="./js/jquery.inputmask.min.js"></script>
     <script src="./js/jquery.liMarquee.min.js"></script>
+    <script src="./js/jquery.fancybox.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./formprocessor.js"></script>
     <script src="./js/app.min.js"></script>
